Fix the content jump

--- a/web/app/themes/clo_web_2015/src/scss/layout/_navigation.scss
+++ b/web/app/themes/clo_web_2015/src/scss/layout/_navigation.scss
@@ -70,11 +70,13 @@ ul.menu {
             width         : 52%;
             //border:solid 1px #0075C9;
             //border-top    : solid 4px #0075C9;
+            
             float         : left;
-            margin-top    : 2.5%;
+            //position:absolute;
+         //margin-top    : 10px;
             margin-left: 4px;
             margin-bottom : 8%;
-            //padding-top:  17px;
+            //padding-top:  1%;
             padding-left: 5px;
             
             p{
@@ -160,6 +162,6 @@ margin:0;
 width    : 88%;
 position : absolute;
             left     : 88px;
-            top   : 13px;
+            top   : 11px;
 
 }
